--- a/src/ListenTogether/Resources/Styles/DefaultTheme.xaml
+++ b/src/ListenTogether/Resources/Styles/DefaultTheme.xaml
@@ -53,6 +53,12 @@
     <Color x:Key="DarkSwitchThumbColor">#FCF2F7</Color>
     <Color x:Key="DarkSwitchThumbOffColor">#605E5C</Color>
 
+    <Color x:Key="PlayingPageBackgroundColor">#333333</Color>
+    <Color x:Key="PlayingPageText">#FCF2F7</Color>
+    <Color x:Key="PlayingPageTextSecond">#9D9D9D</Color>
+    <Color x:Key="PlayingPageLyricText">#BAB7B2</Color>
+    <Color x:Key="PlayingPageLyricHighlight">#EFEFEF</Color>
+    
     <Style TargetType="Label"
            x:Key="Logo">
         <Setter Property="FontSize"
@@ -84,7 +90,7 @@
         <Setter Property="FontSize"
                 Value="13" />
         <Setter Property="TextColor"
-                Value="{AppThemeBinding Light={StaticResource LightTextSecond}, Dark={StaticResource DarkTextSecond}}" />
+                Value="{StaticResource PlayingPageTextSecond}" />
     </Style>
 
     <Style TargetType="Label">
