--- a/src/ListenTogether/Pages/MyFavoriteDetailPage.xaml
+++ b/src/ListenTogether/Pages/MyFavoriteDetailPage.xaml
@@ -128,8 +128,8 @@
                                 </Grid>
                             </On>
                             <On Platform="Android,iOS">
-                                <Grid Margin="0,0,0,20"
-                                      RowDefinitions="auto,auto"
+                                <Grid Margin="0,10,0,0"
+                                      RowDefinitions="auto,auto,10"
                                       ColumnDefinitions="40,*,30">
                                     <Grid.GestureRecognizers>
                                         <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:MyFavoriteDetailPageViewModel}}, Path=PlayMusicCommand}"
@@ -188,6 +188,11 @@
                                                                   CommandParameter="{Binding .}"/>
                                         </Image.GestureRecognizers>
                                     </Image>
+                                    <Label Grid.Row="2"
+											   Grid.ColumnSpan="3"
+                                               Margin="0,9,0,0"
+                                               BackgroundColor="{AppThemeBinding Dark={StaticResource DarkListLine},Light={StaticResource LightListLine}}"></Label>
+
                                 </Grid>
                             </On>
                         </OnPlatform>
