--- a/src/ListenTogether/Pages/MyFavoritePage.xaml
+++ b/src/ListenTogether/Pages/MyFavoritePage.xaml
@@ -112,9 +112,9 @@
                                 </On>
 
                                 <On Platform="Android,iOS">
-                                    <Grid Margin="0,0,0,20"
-                                      RowDefinitions="auto,auto"
-                                      ColumnDefinitions="60,*,40">
+                                    <Grid Margin="0,10,0,0"
+                                          RowDefinitions="auto,auto,10"
+                                          ColumnDefinitions="60,*,40">
                                         <Grid.GestureRecognizers>
                                             <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:MyFavoritePageViewModel}}, Path=EnterMyFavoriteDetailCommand}"
                                                               CommandParameter="{Binding .}">
@@ -166,6 +166,12 @@
                                                                   CommandParameter="{Binding .}"/>
                                             </Image.GestureRecognizers>
                                         </Image>
+
+                                        <Label Grid.Row="3"
+											   Grid.ColumnSpan="3"
+                                               Margin="0,9,0,0"
+                                               BackgroundColor="{AppThemeBinding Dark={StaticResource DarkListLine},Light={StaticResource LightListLine}}"></Label>
+
                                     </Grid>
                                 </On>
                             </OnPlatform>
