--- a/src/ListenTogether/Pages/SearchPage.xaml
+++ b/src/ListenTogether/Pages/SearchPage.xaml
@@ -42,7 +42,7 @@
                 </SearchBar.Behaviors>
             </SearchBar>
 
-            <Border VerticalOptions="Start"
+            <Border VerticalOptions="FillAndExpand"
                     HorizontalOptions="FillAndExpand"
                     Padding="1"
                     StrokeThickness="1">
@@ -56,6 +56,11 @@
                                                           CommandParameter="{Binding .}"/>
                                 </StackLayout.GestureRecognizers>
                                 <Label Text="{Binding .}"/>
+                                <Label HeightRequest="1"
+                                       Margin="0,10,0,0"
+                                       VerticalTextAlignment="Center"
+                                       VerticalOptions="EndAndExpand"
+                                       BackgroundColor="{AppThemeBinding Dark={StaticResource DarkListLine},Light={StaticResource LightListLine}}"/>
                             </StackLayout>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
