--- a/src/ListenTogether/Pages/SettingsPage.xaml
+++ b/src/ListenTogether/Pages/SettingsPage.xaml
@@ -93,21 +93,26 @@
 
                             <StackLayout Margin="0,10,0,0"
                                          Orientation="Horizontal">
+                                <StackLayout.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding SetApiDomainCommand}"/>
+                                </StackLayout.GestureRecognizers>
                                 <Label Text="服务器地址"
                                        VerticalTextAlignment="Center"/>
-                                <Button Margin="80,0,0,0"
-                                        HorizontalOptions="{OnPlatform Android=EndAndExpand, iOS=EndAndExpand }"
-                                        Command="{Binding SetApiDomainCommand}"
-                                        Text="修改"/>
-                            </StackLayout>
-                            <StackLayout Margin="0,5,0,0"
-                                         Orientation="Horizontal">
+
                                 <Label Style="{StaticResource Explain}"
-                                       Text="{Binding ApiDomain}"/>
+                                       Text="{Binding ApiDomain}"
+                                       Margin="{OnPlatform UWP='80,0,0,0',MacCatalyst='80,0,0,0'}"
+                                       HorizontalOptions="{OnPlatform Android=EndAndExpand, iOS=EndAndExpand }"
+                                       VerticalOptions="Center"
+                                       VerticalTextAlignment="Center"/>
                                 <Label Style="{StaticResource Explain}"
-                                       Text="未设置"
-                                       IsVisible="{Binding ApiDomain, Converter={StaticResource IsStringNullOrWhiteSpaceConverter}}"/>
+                                       FontSize="16"
+                                       Margin="{OnPlatform Android='10,0,0,0',iOS='10,0,0,0'}"
+                                       HorizontalOptions="{OnPlatform Android=End, iOS=End,UWP=EndAndExpand,MacCatalyst=EndAndExpand }"
+                                       VerticalTextAlignment="Center"
+                                       Text="〉"></Label>
                             </StackLayout>
+
 
                             <!-- 搜索设置 -->
                             <Label Margin="0,20,0,0"
