--- a/src/ListenTogether/Resources/Styles/DefaultTheme.xaml
+++ b/src/ListenTogether/Resources/Styles/DefaultTheme.xaml
@@ -4,10 +4,10 @@
                     x:Class="ListenTogether.Resources.Styles.DefaultTheme">
 
     <Color x:Key="LightLogo">#C98FFF</Color>
-    <Color x:Key="LightAppNetwork">#C98FFF</Color>
     <Color x:Key="LightFlyoutBackgroundColor">#FFFFFF</Color>
     <Color x:Key="LightBackground">#F7F7F7</Color>
     <Color x:Key="LightLine">#000000</Color>
+    <Color x:Key="LightListLine">#EDEDED</Color>
     <Color x:Key="LightTitle">#262626</Color>
     <Color x:Key="LightText">#262626</Color>
     <Color x:Key="LightTextSecond">#717171</Color>
@@ -27,12 +27,13 @@
     <Color x:Key="LightSwitchOnColor">#C98FFF</Color>
     <Color x:Key="LightSwitchThumbColor">#262626</Color>
     <Color x:Key="LightSwitchThumbOffColor">#605E5C</Color>
+    <Color x:Key="LightGroupBackgroundColor">#F0F0F0</Color>
 
     <Color x:Key="DarkLogo">#C98FFF</Color>
-    <Color x:Key="DarkAppNetwork">#929292</Color>
     <Color x:Key="DarkFlyoutBackgroundColor">#3B3B3B</Color>
     <Color x:Key="DarkBackground">#333333</Color>
     <Color x:Key="DarkLine">#767676</Color>
+    <Color x:Key="DarkListLine">#333333</Color>
     <Color x:Key="DarkTitle">#FCF2F7</Color>
     <Color x:Key="DarkText">#FCF2F7</Color>
     <Color x:Key="DarkTextSecond">#9D9D9D</Color>
@@ -52,13 +53,14 @@
     <Color x:Key="DarkSwitchOnColor">#C98FFF</Color>
     <Color x:Key="DarkSwitchThumbColor">#FCF2F7</Color>
     <Color x:Key="DarkSwitchThumbOffColor">#605E5C</Color>
+    <Color x:Key="DarkGroupBackgroundColor">#605E5C</Color>
 
     <Color x:Key="PlayingPageBackgroundColor">#333333</Color>
     <Color x:Key="PlayingPageText">#FCF2F7</Color>
     <Color x:Key="PlayingPageTextSecond">#9D9D9D</Color>
     <Color x:Key="PlayingPageLyricText">#BAB7B2</Color>
     <Color x:Key="PlayingPageLyricHighlight">#EFEFEF</Color>
-    
+
     <Style TargetType="Label"
            x:Key="Logo">
         <Setter Property="FontSize"
@@ -67,14 +69,6 @@
                 Value="blod"/>
         <Setter Property="TextColor"
                 Value="{AppThemeBinding Light={StaticResource LightLogo}, Dark={StaticResource DarkLogo}}" />
-    </Style>
-
-    <Style TargetType="Label"
-           x:Key="AppNetwork">
-        <Setter Property="FontSize"
-                Value="13" />
-        <Setter Property="TextColor"
-                Value="{AppThemeBinding Light={StaticResource LightAppNetwork}, Dark={StaticResource DarkAppNetwork}}" />
     </Style>
 
     <Style TargetType="Label"
