1、优化播放组件样式

--- a/src/ListenTogether/Pages/MyFavoritePage.xaml
+++ b/src/ListenTogether/Pages/MyFavoritePage.xaml
@@ -183,7 +183,7 @@
         </StackLayout>
         <controls:Player Grid.Row="1" 
                          x:Name="player"
-                         IsMiniWhenPhone="True"/>
+                         IsPlayingPage="False"/>
     </Grid>
 
 </ContentPage>
