--- a/src/ListenTogether/Pages/SearchResultPage.xaml
+++ b/src/ListenTogether/Pages/SearchResultPage.xaml
@@ -186,6 +186,6 @@
         </StackLayout>
         <controls:Player Grid.Row="1" 
                          x:Name="player"
-                         IsMiniWhenPhone="True"/>
+                         IsPlayingPage="False"/>
     </Grid>
 </ContentPage>
