--- a/src/ListenTogether/Controls/Player.xaml
+++ b/src/ListenTogether/Controls/Player.xaml
@@ -8,8 +8,8 @@
             <OnPlatform x:TypeArguments="View">
                 <On Platform="UWP, macOS">
                     <Grid>
-                        <Line 
-                            Stroke="{AppThemeBinding Dark={StaticResource DarkLine},Light={StaticResource LightLine}}"
+                        <Line
+                            Stroke="{StaticResource PlayingPageLine}"
                             X2="4000" />
                         <StackLayout 
                             Orientation="Horizontal"
@@ -34,16 +34,16 @@
                                         x:Name="LblMusicName"
                                         Margin="0,10,0,0"
                                         VerticalOptions="Start"
-                                        LineBreakMode="TailTruncation"
-                                        TextColor="{AppThemeBinding Light={StaticResource LightText}, Dark={StaticResource DarkText}}"/>
+                                        LineBreakMode="TailTruncation"/>
                                     <Label 
                                         x:Name="LblMusicArtistAndAlbum"
                                         Margin="0,0,0,10"
                                         VerticalOptions="EndAndExpand"
-                                        Style="{StaticResource Explain}"
+                                        Style="{StaticResource ExplainFontSize}"
                                         LineBreakMode="TailTruncation"/>
-                                    <Label x:Name="LblMusicArtist"
-                                               IsVisible="False"/>
+                                    <Label 
+                                        x:Name="LblMusicArtist"
+                                        IsVisible="False"/>
                                 </StackLayout>
 
                             </StackLayout>
@@ -66,13 +66,13 @@
                                         </Image.GestureRecognizers>
                                     </Image>
 
-                                    <Image x:Name="ImgBack"
-                                               Source="back_dark.png"
-                                               WidthRequest="20"
-                                               HeightRequest="20"
-                                               VerticalOptions="Center"
-                                               HorizontalOptions="Center"
-                                               Aspect="AspectFill">
+                                    <Image 
+                                        x:Name="ImgBack"
+                                        WidthRequest="20"
+                                        HeightRequest="20"
+                                        VerticalOptions="Center"
+                                        HorizontalOptions="Center"
+                                        Aspect="AspectFill">
                                         <Image.GestureRecognizers>
                                             <TapGestureRecognizer Tapped="Previous_Tapped"/>
                                         </Image.GestureRecognizers>
@@ -89,25 +89,25 @@
                                         </Image.GestureRecognizers>
                                     </Image>
 
-                                    <Image x:Name="ImgNext"
-                                               Source="next_dark.png"
-                                               WidthRequest="20"
-                                               HeightRequest="20"
-                                               VerticalOptions="Center"
-                                               HorizontalOptions="Center"
-                                               Aspect="AspectFill">
+                                    <Image 
+                                        x:Name="ImgNext"
+                                        WidthRequest="20"
+                                        HeightRequest="20"
+                                        VerticalOptions="Center"
+                                        HorizontalOptions="Center"
+                                        Aspect="AspectFill">
                                         <Image.GestureRecognizers>
                                             <TapGestureRecognizer Tapped="Next_Tapped"/>
                                         </Image.GestureRecognizers>
                                     </Image>
 
-                                    <Image x:Name="ImgOther"
-                                               Source="puzzled_dark.png"
-                                               WidthRequest="20"
-                                               HeightRequest="20"
-                                               VerticalOptions="Center"
-                                               HorizontalOptions="Center"
-                                               Aspect="AspectFill">
+                                    <Image 
+                                        x:Name="ImgOther"
+                                        WidthRequest="20"
+                                        HeightRequest="20"
+                                        VerticalOptions="Center"
+                                        HorizontalOptions="Center"
+                                        Aspect="AspectFill">
                                         <Image.GestureRecognizers>
                                             <TapGestureRecognizer Tapped="Puzzled_Tapped"/>
                                         </Image.GestureRecognizers>
@@ -120,6 +120,7 @@
                                     HeightRequest="30">
                                     <Label
                                         x:Name="LblPosition"
+                                        TextColor="{Binding TextColor, Source={x:Reference LblMusicName}}"
                                         HorizontalOptions="Start"
                                         VerticalTextAlignment="Center"/>
                                     <Slider
@@ -129,14 +130,12 @@
                                         Minimum="0"
                                         Maximum="1"
                                         Margin="10,0,10,0"
-                                        MinimumTrackColor="{StaticResource PlayerSliderThumbLeftColor}"
-                                        MaximumTrackColor="{StaticResource PlayerSliderThumbRightColor}"
-                                        ThumbColor="{StaticResource PlayerSliderThumbColor}"
                                         DragStarted="SliderPlayProgress_DragStarted"
                                         DragCompleted="SliderPlayProgress_DragCompleted">
                                     </Slider>
                                     <Label
                                         x:Name="LblDuration"
+                                        TextColor="{Binding TextColor, Source={x:Reference LblMusicName}}"
                                         HorizontalOptions="End"
                                         VerticalTextAlignment="Center"/>
                                 </StackLayout>
@@ -164,9 +163,9 @@
                                     VerticalOptions="Center"
                                     Minimum="0"
                                     Maximum="100"
-                                    MinimumTrackColor="{StaticResource PlayerSliderThumbLeftColor}"
-                                    MaximumTrackColor="{StaticResource PlayerSliderThumbRightColor}"
-                                    ThumbColor="{StaticResource PlayerSliderThumbColor}"
+                                    MinimumTrackColor="{Binding MinimumTrackColor, Source={x:Reference SliderPlayProgress}}"
+                                    MaximumTrackColor="{Binding MaximumTrackColor, Source={x:Reference SliderPlayProgress}}"
+                                    ThumbColor="{Binding ThumbColor, Source={x:Reference SliderPlayProgress}}"
                                     ValueChanged="SliderVolume_ValueChanged"/>
                             </StackLayout>
                         </StackLayout>
@@ -191,6 +190,7 @@
 
                             <Label 
                                 Margin="5,0,0,0"
+                                TextColor="{Binding TextColor, Source={x:Reference LblMusicName}}"
                                 HorizontalOptions="Start"
                                 VerticalTextAlignment="Center"
                                 LineBreakMode="TailTruncation">
@@ -226,7 +226,7 @@
                             <StackLayout Orientation="Horizontal">
                                 <Label 
                                     Text="{Binding Text, Source={x:Reference LblPosition}}"
-                                    Style="{StaticResource DarkLabel}"
+                                    TextColor="{Binding TextColor, Source={x:Reference LblMusicName}}"
                                     HorizontalOptions="Start"                                    
                                     VerticalTextAlignment="Center"/>
                                 <Slider 
@@ -236,15 +236,15 @@
                                     Value="{Binding Value, Source={x:Reference SliderPlayProgress}}"
                                     Minimum="{Binding Minimum, Source={x:Reference SliderPlayProgress}}"
                                     Maximum="{Binding Maximum, Source={x:Reference SliderPlayProgress}}"
-                                    MinimumTrackColor="{StaticResource PlayerSliderThumbLeftColor}"
-                                    MaximumTrackColor="{StaticResource PlayerSliderThumbRightColor}"
-                                    ThumbColor="{StaticResource PlayerSliderThumbColor}"
+                                    MinimumTrackColor="{Binding MinimumTrackColor, Source={x:Reference SliderPlayProgress}}"
+                                    MaximumTrackColor="{Binding MaximumTrackColor, Source={x:Reference SliderPlayProgress}}"
+                                    ThumbColor="{Binding ThumbColor, Source={x:Reference SliderPlayProgress}}"
                                     DragStarted="SliderPlayProgress_DragStarted"
                                     DragCompleted="SliderPlayProgress_DragCompleted">
                                 </Slider>
                                 <Label 
                                     Text="{Binding Text, Source={x:Reference LblDuration}}"
-                                    Style="{StaticResource DarkLabel}"
+                                    TextColor="{Binding TextColor, Source={x:Reference LblMusicName}}"
                                     HorizontalOptions="End"
                                     VerticalTextAlignment="Center"/>
                             </StackLayout>
