--- a/src/ListenTogether/Pages/PlaylistPage.xaml
+++ b/src/ListenTogether/Pages/PlaylistPage.xaml
@@ -179,6 +179,6 @@
 
         <controls:Player Grid.Row="1" 
                          x:Name="player"
-                         IsMiniWhenPhone="True"/>
+                         IsPlayingPage="False"/>
     </Grid>
 </ContentPage>
