--- a/src/ListenTogether/Pages/SettingsPage.xaml
+++ b/src/ListenTogether/Pages/SettingsPage.xaml
@@ -209,6 +209,6 @@
         </StackLayout>
         <controls:Player Grid.Row="1" 
                          x:Name="player"
-                         IsMiniWhenPhone="True"/>
+                         IsPlayingPage="False"/>
     </Grid>
 </ContentPage>
