--- a/src/ListenTogether/App.xaml
+++ b/src/ListenTogether/App.xaml
@@ -5,8 +5,11 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="ListenTogether.App">
     <Application.Resources>
-        <ResourceDictionary Source="Resources/Styles/DefaultTheme.xaml"/>
         <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
+                <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
             <toolkit:IsEqualConverter x:Key="IsEqualConverter" />
             <toolkit:IsNotEqualConverter x:Key="IsNotEqualConverter" />
             <toolkit:InvertedBoolConverter x:Key="InvertedBoolConverter" />
