--- a/src/ListenTogether/Pages/PlayingPage.xaml
+++ b/src/ListenTogether/Pages/PlayingPage.xaml
@@ -59,25 +59,14 @@
                         </Image.Source>
                     </Image>
 
-                    <StackLayout Margin="0,10,0,0"
-                                 Orientation="Horizontal"
-                                 HorizontalOptions="Center">
-                        <Label Text="复制歌曲链接"
-                               TextColor="{StaticResource PlayingPageText}"
-                               IsVisible="{OnPlatform Android=false,iOS=false,WinUI=true,MacCatalyst=true}">
-                            <Label.GestureRecognizers>
-                                <TapGestureRecognizer Command="{Binding CopyMusicLinkCommand}"/>
-                            </Label.GestureRecognizers>
-                        </Label>
-
-                        <Label Text="分享歌曲链接"
-                               TextColor="{StaticResource PlayingPageText}"
-                               IsVisible="{OnPlatform Android=true,iOS=true,WinUI=false,MacCatalyst=false}">
-                            <Label.GestureRecognizers>
-                                <TapGestureRecognizer Command="{Binding ShareMusicLinkCommand}"/>
-                            </Label.GestureRecognizers>
-                        </Label>
-                    </StackLayout>
+                    <Label Margin="0,10,0,0"
+                           HorizontalOptions="Center"
+                           Text="{Binding ShareLabelText}"
+                           TextColor="{StaticResource PlayingPageText}">
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding ShareMusicLinkCommand}"/>
+                        </Label.GestureRecognizers>
+                    </Label>
 
                 </StackLayout>
 
